# EasyLangSwitcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp
handlers/: keyboard.cpp  keyboard.h
helpers/: acrylicEffect.h  iconHelper.h  svg.h
i18n/: en.h  ru.h
resources/: EasyLangSwitcher_settings.ui  EasyLangSwitcher_settings_keyWarning.ui  EasyLangSwitcher_settings_notification.ui  EasyLangSwitcher_settings_regex.ui  EasyLangSwitcher_tray.ui  icon.rc  resources.qrc  version.rc.in
resources/qt/: EasyLangSwitcher_settings.ui  EasyLangSwitcher_settings_confirmation.ui  EasyLangSwitcher_settings_support.ui  EasyLangSwitcher_settings_warning.ui  EasyLangSwitcher_tray.ui
src/app/: main.cpp
src/core/config/: app_config.h  app_settings.cpp  app_settings.h
src/core/handlers/: kb.cpp  kb.h
src/core/helpers/: acrylicHelper.h  iconHelper.h
src/core/i18n/: lang.cpp  lang.h  ru.h
src/ui/forms/: EasyLangSwitcher_indicator.ui  EasyLangSwitcher_settings.ui  EasyLangSwitcher_settings_notification.ui  EasyLangSwitcher_settings_regex.ui  EasyLangSwitcher_settings_support.ui  EasyLangSwitcher_settings_tooltip.ui  EasyLangSwitcher_tray.ui
src/ui/helpers/: acrylicHelper.h  hoverHelper.h  iconHelper.h  keySequenceHelper.h  vkMapper.h
src/ui/tray/: tray.cpp  tray.h
src/ui/widgets/: animated_selector.cpp  animated_selector.h  settings.cpp  settings.h  window_dragger.cpp  window_dragger.h
widgets/: settings.cpp  settings.h  tray.cpp  tray.h
